# home-interface

./: Cargo.toml  README.md  build.rs  deploy.sh
deb-deps/: libssl-dev_1.0.1t-1+deb8u5_armhf.deb
src/: lib.rs  main.rs
src/hardware/: hardware_error.rs  mod.rs  protocol.rs
src/interface/: cors_middleware.rs  interface_error.rs  mod.rs  schema.in.rs
src/lights/: lights_error.rs  mod.rs  protocol.rs
src/logic/: mod.rs
src/system_information/: mod.rs
src/util/: mod.rs  simple_logger.rs
